<resources>
    <string name="app_name">Crazy Notes</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_haven_t_account">havent account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="powered_by">Powered By</string>
    <string name="abhishek">A B H I S H E K</string>
    <string name="you_have_account">have account?</string>
    <string name="verify">Verify</string>
    <string name="name">Enter Your Name</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="explain">We Are here, Chill</string>
    <string name="recover">Recover</string>
    <string name="forgetbtn">Recover</string>
    <string name="go_back_to_login_page">Go back to login page</string>
    <string name="this_is_your_heading">This is Your heading</string>
    <string name="we_will_write_content_here">We will write content here</string>
    <string name="enter_here">Enter here…</string>
    <string name="edit_your_text_here">Edit your text here…</string>
    <string name="toodo">TODO</string>
    <string name="tooodo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="write_your_content_here">Write your content here...</string>
    <string name="write_your_title_here">Write your title here...</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>