<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#FF9800"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".SignIn">

    <LinearLayout
        android:orientation="vertical"
        android:background="#FF9800"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="45sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="22dp"

            >

            <EditText
                android:id="@+id/usernamelogn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_draw"
                android:fontFamily="@font/amaranth"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000">
            <EditText
                android:id="@+id/passwordsignin1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:background="@drawable/rectangle_draw"
                android:fontFamily="@font/amaranth"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:id="@+id/fgtpwd"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:layout_gravity="right"
            android:gravity="center"
            tools:ignore="RtlHardcoded"
            />


        <Button
            android:id="@+id/signinlog"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button"
            android:textSize="15sp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="#11B154" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="5dp"
                android:text="@string/you_haven_t_account"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/signuptv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:paddingStart="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
